--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Hello World! (Olá mundo!)
+            <h1 class="apresentacao__conteudo__titulo">Hello World! (Olá mundo!) <br>
             <strong class="titulo-destaque">Seja bem-vindo(a) ao meu projeto Frontend ♡</strong></h1>
             <p class="apresentacao__conteudo__paragrafo">Olá! Tudo bem? Sou Bruna SaNog, publicitária e comunicadora, atualmente imersa aos estudos de desenvolvimento de
             software, estou cursando Análise e Desenvolvimento de Sistemas.</p>
